syntax = "proto3";

package relayer;

// The chain definition
message Chain {
    // The chain id
    string chain_id = 1;
    // The ibc version
    string ibc_version = 2;
    // The ibc contract address
    string ibc_contract = 3;
}
